platform/overlays/dev/forgejo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
